# api-types

./: main.py  notes.md  pyproject.toml  summary.md
01-rest/: README.md  client.py  server.py
02-graphql/: README.md  client.py  server.py
03-soap/: README.md  client.py  server.py
04-grpc/: README.md  calc.proto  calc_pb2.py  calc_pb2_grpc.py  client.py  server.py
05-websocket/: README.md  client.py  server.py
06-webhooks/: README.md  receiver.py  sender.py
07-mcp/: README.md  server.py
08-cli/: README.md  cli.py
09-sse/: README.md  client.py  server.py
10-trpc/rest-demo-client/: README.md  pyproject.toml
10-trpc/rest-demo-client/rest_demo_client/: __init__.py
10-trpc/rest-demo-client/rest_demo_client/api/default/: create_book_books_post.py  delete_book_books_book_id_delete.py  get_book_books_book_id_get.py  list_books_books_get.py  update_book_books_book_id_put.py
10-trpc/rest-demo-client/rest_demo_client/models/: __init__.py  book_in.py
